<resources>
    <string name="app_name">Triippie</string>
    <string name="enter_trip_details">Enter Trip Details</string>
    <string name="save">Save</string>
    <string name="the_start_hotel_casino_amp_skypod"><![CDATA[The START Hotel, Casino & SkyPod]]></string>
    <string name="_4_91">4.91</string>
    <string name="_510">(510)</string>
    <string name="backgoroundimage">backgoroundImage</string>
    <string name="browse_places">BROWSE PLACES</string>
    <string name="one">One</string>
    <string name="view">View</string>
    <string name="a">a</string>
    <string name="worth">Worth</string>
    <string name="thousand_words">Thousand Words</string>
    <string name="todo">TODO</string>
    <string name="sky_bar_at_waldorf_astoria">Sky Bar at Waldorf Astoria</string>
    <string name="_4_75">4.75</string>
    <string name="__510">(510)</string>
    <string name="places_to_visit_in_kota">Places to Visit in Kota</string>
    <string name="itinerary">itinerary</string>
    <string name="place1">RAJASTHAN</string>
    <string name="place2">MUMBAI</string>
    <string name="place3">KASHMIR</string>
    <string name="place4">SEVEN SISTERS</string>
    <string name="place_images">Place images</string>
    <string name="turist_spot_image">Turist spot Image</string>
    <string name="rating1">4.5</string>
    <string name="rating2">4.3</string>
    <string name="rating3">4.0</string>
    <string name="rating4">4.9</string>
    <string name="rating5">4.7</string>
    <string name="ratingcount1">400</string>
    <string name="ratingcount2">500</string>
    <string name="ratingcount3">600</string>
    <string name="ratingcount4">800</string>
    <string name="ratingcount5">900</string>
    <string name="spot1">Aru Valley</string>
    <string name="spot2">Gurez Valley</string>
    <string name="spot3">Tulip Garden</string>
    <string name="spot4">Dal Lake</string>
    <string name="spot5">Doodhpathri</string>
    <string name="spot6">Gateway Of India</string>
    <string name="spot7">Chhatrapati Shivaji Terminus </string>
    <string name="spot8">Global Vipasana Pagoda</string>
    <string name="spot9">Bandra Worli Sea</string>
    <string name="spot10">Seven Sister Falls- Adobe Of Clouds</string>
    <string name="spot11">Hornbill Festival</string>
    <string name="spot12">Dzukou Valley</string>
    <string name="spot14">Mehrangarh Fort, Jodhpur</string>
    <string name="spot13">Maharajas Mahal</string>
    <string name="spot15">TajMahal</string>
    <string name="spot16">Hawa Mahal</string>
    <string name="backgoround">backgoround</string>
    <string name="place"><![CDATA[THE START Hotel, Casino & SkyPod]]></string>
    <string name="top_of_the_world_is_known_as_one_of_the_most_romantic_restaurants_in_the_city_it_offers_an_intimate_dining_setting_paired_with_an_extravagant_view_of_the_entire_city_all_encompassed_in_360_degree">Top of the World is known as one of the most romantic restaurants in the city. It offers an intimate dining setting paired with an extravagant view of the entire city, all encompassed in 360-degree …</string>
    <string name="back_arrow">back arrow</string>
    <string name="_4_5">4.75</string>
    <string name="more_details">More Details</string>
    <string name="_51">(510)</string>
    <string name="next_arrow">next arrow</string>
    <string name="about1">Aru Valley is a famous tourist place in Jammu &amp; Kashmir located in the Anantnag district around 12 kilometers from Pahalgam. Tourists are attracted towards it because of its lush meadows, pristine lakes &amp; mountains, and it also serves as a base camp for trekking to the Kolahoi Glacier and Tarsar Lake.</string>
    <string name="view1">It is an attractive tourist place to visit during your holidays in Kashmir not just for the gorgeous views, but for the various activities which you can enjoy here. During winters, when it’s covered with snow, it becomes a famous destination for skiing &amp; heli skiing.</string>
    <string name="price1">You will have to pay Rs. 25 per head to enter the valley.</string>
    <string name="timing1">July to September is the best time to visit Aru Valley, since it’s great for sightseeing at this time. To enjoy skiing however, plan a trip to Aru Valley during the winter.</string>
    <string name="about2">Gurez Valley is a hidden gem in Kashmir waiting to be explored.Surrounded by majestic mountains and housing a diverse variety of fauna and wildlife, it is the perfect place to spend some peaceful time It was once the gateway to the famous Silk Road from Europe to Kashgar in China.</string>
    <string name="view2">If there is heaven on Earth, here it is!No other quote can do justice to what this place holds.The place is far away from the maddening crowd. Almost 7 hours from Srinagar, but boy, what a place it is !!!</string>
    <string name="price2">24,500/-6D | 5N</string>
    <string name="timing2">urez receives heavy snowfall in winter. Even the passes leading up to it receive a lot of snowfall, so its shut for six months in a year. The valley remains open to tourists from May to October. The best time to visit Gurez is from late June to mid August.</string>
    <string name="about3">Indira Gandhi Memorial Tulip garden, previously Model Floriculture Center, is a tulip garden in Srinagar. It is the largest tulip garden in Asia spread over an area of about 30 hectares.Tulip festival is an annual celebration that aims to showcase the range of flowers in the garden as a part of tourism efforts by the Government of Jammu and Kashmir. It is organized during the onset of spring season in Kashmir valley."</string>
    <string name="view3">It is situated on the foothills of Zabarwan Range with an overview of Dal Lake. The garden was opened in 2007 with the aim to boost floriculture and tourism in Kashmir Valley. The garden is built on a sloping ground in a terraced fashion consisting of seven terraces. Apart from tulips, many other species of flowers – hyacinths, daffodils and ranunculus have been added as well.It is situated on the foothills of Zabarwan Range with an overview of Dal Lake. The garden was opened in 2007 with the aim to boost floriculture and tourism in Kashmir Valley. The garden is built on a sloping ground in a terraced fashion consisting of seven terraces. Apart from tulips, many other species of flowers – hyacinths, daffodils and ranunculus have been added as well"</string>
    <string name="price3"> INR 50 for adults and INR 25 for children."</string>
    <string name="timing3">The best time to visit the Tulip Garden in Srinagar is the month of April, when the tulips are in full bloom and the annual Tulip Festival is held. Though, this popular attraction in Srinagar is open throughout the year for the visitors.Tulip Garden opens from 9:00 am to 7:00 pm every day."</string>
    <string name="about4">"Reckoned to be the pride of Kashmir tourism, Dal Lake is the most popular attraction in Srinagar. Enclosed by splendid Pir Panjal mountains and Mughal Gardens, this must-see place is ideal for family vacationers, honeymoon couples, and even for solo travellers seeking peace."</string>
    <string name="view4">The canopied Shikaras sailing on the lake are one of the major attractions of Dal Lake. The houseboats on the lake are also the top attraction as the best accommodation option in Srinagar to the tourists.Along with being a popular tourist attraction for nature lovers, Dal Lake even invites the fishing enthusiast with its plethora of fishes along with Carp. In addition to this, the floating vegetable and flower market is a major place to see.</string>
    <string name="price4">INR 770 for 1 hour</string>
    <string name="timing4">March to November is the best time to visit Dal Lake since the weather remains pleasant in this duration.</string>
    <string name="about5">Amidst the Pir Panjal Range of the Himalayas, Yusmarg or the ‘Meadows of Jesus’ is believed to be the place where Jesus once lived. Sitting by the scintillating River Doodhganga overlooking the mighty Sunset and Tatakooti Peaks, Yusmarg offers itself as a perfect tourist destination for all those looking for relaxing and rejuvenating vacation amidst nature.The best way to reach Yusmarg is by road as it is situated only 50 km away from Srinagar</string>
    <string name="view5">Yusmarg has a handful of attractions for sightseeing such as the 600 years old Muslim pilgrimage destination of Charar-e-Shareef, the alpine Nilnag Lake, the picturesque valley and meadow of Sang-e-Safed. There are two more scenic meadows, namely, Lidder Mad and Haigan, en route Sang-e-Safed that make for important attractions in Yusmarg.While trekking is one option to reach Nilnag, Sang-e-Safed and the two other meadows, a pony ride is another option to these major tourist places in Yusmarg. For the adventure enthusiasts, there are also Doodhpathri and Tosa Maidan treks, which are quite rewarding.</string>
    <string name="price5">For an SUV like Scorpio or Innova, expect the per-day fare to be around Rs. 2,500 including fuel. If you chose a hatchback like Etios, this charge would then be around Rs. 1800 to Rs. 2000.</string>
    <string name="timing5">Yusmarg is a famous hill station in Jammu &amp; Kashmir. Although it can be visited round the year, the best season to visit Yusmarg is winter season from October to Feb.The entire place turns into fairytale land.Especially in December and January, the stretch above Charar-e-Shareef gets blocked due to snow making it difficult to reach Yusmarg. Those who are interested in visiting Yusmarg in winter have to hire 4X4 vehicle.</string>
    <string name="about6">The Gateway of India is located on the waterfront at Apollo Bunder area at the end of Chhatrapati Shivaji Marg in South Mumbai and overlooks the Arabian Sea. The monument has also been referred to as the Taj Mahal of Mumbai, and is the city’s top tourist attraction.</string>
    <string name="_10_12">$10-$12</string>
    <string name="the_strat_hotel_casino_amp_skypod"><![CDATA[The STRAT Hotel, Casino & SkyPod]]></string>
    <string name="price">Price</string>
    <string name="_4">4.75</string>
    <string name="_5">(510)</string>
    <string name="about">About</string>
    <string name="top_of_the_world_is_known_as_one_of_the_most_romantic_restaurants_in_the_city_it_offers_an_intimate_dining_setting_paired_with_an_extravagant_view_of_the_entire_city_all_encompassed_in_a_360_degree_revolving_frame_yes_that_s_right_this_restaurant_allows_diners_the_opportunity_to_see_las_vegas_in_its_entirety_if_they_re_able_to_stay_for_at_least_80_minutes_the_time_needed_for_one_full_rotation">Top of the World is known as one of the most romantic restaurants in the city. It offers an intimate dining setting paired with an extravagant view of the entire city, all encompassed in a 360-degree revolving frame. Yes, that’s right, this restaurant allows diners the opportunity to see Las Vegas in its entirety if they’re able to stay for at least 80 minutes, the time needed for one full rotation.</string>
    <string name="it_might_surprise_you_but_this_is_the_only_revolving_restaurant_in_las_vegas_located_844_feet_in_the_air_you_re_bound_to_get_a_great_view_of_the_city_with_its_massive_floor_to_ceiling_windows">It might surprise you, but this is the only revolving restaurant in Las Vegas. Located 844 feet in the air, you’re bound to get a great view of the city with its massive floor-to-ceiling windows.</string>
    <string name="timings">Timings</string>
    <string name="hello">hello</string>
    <string name="bg_image">bg-image</string>
    <string name="back">back</string>
</resources>